feat: log types crud and open api defintions
