# controllers/log_type.go
@@ -9,6 +9,14 @@ import (
 	"github.com/gofiber/fiber/v2"
 )
 
+// GetLogTypes
+// @Summary Get all LogTypes
+// @Description Get all LogTypes
+// @Tags LogTypes
+// @Accept  json
+// @Produce  json
+// @Success 200 {array} models.LogTypeResponse
+// @Router /log-types [get]
 func GetLogTypes(c *fiber.Ctx) error {
 	db := database.DBConn
 
@@ -39,6 +47,15 @@ func GetLogTypes(c *fiber.Ctx) error {
 	return c.JSON(logTypes)
 }
 
+// GetLogType
+// @Summary Get one logType
+// @Description Get one logType
+// @Tags LogTypes
+// @Accept  json
+// @Produce  json
+// @Param id path string true "LogType ID"
+// @Success 200 {object} models.LogTypeResponse
+// @Router /log-types/{id} [get]
 func GetLogType(c *fiber.Ctx) error {
 	id := c.Params("id")
 	db := database.DBConn
@@ -47,8 +64,17 @@ func GetLogType(c *fiber.Ctx) error {
 	return c.JSON(logType)
 }
 
+// CreateLogType
+// @Summary Create a new logType
+// @Description Create a new logType
+// @Tags LogTypes
+// @Accept  json
+// @Produce  json
+// @Param log_type body models.LogTypePayload true "LogType"
+// @Success 200 {object} models.LogTypeResponse
+// @Router /log-types [post]
 func AddLogType(c *fiber.Ctx) error {
-	var logType models.LogType
+	var logType models.LogTypePayload
 	if err := c.BodyParser(&logType); err != nil {
 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
 			"error": err.Error(),
@@ -56,37 +82,73 @@ func AddLogType(c *fiber.Ctx) error {
 	}
 
 	errors := utils.ValidateStruct(logType)
-
 	if errors != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(errors)
 	}
 
 	db := database.DBConn
-	status := db.Create(&logType)
+	payLoadModel := models.LogType{
+		Name:        logType.Name,
+		Description: logType.Description,
+	}
+
+	status := db.Create(&payLoadModel)
 
 	if status.Error != nil {
 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
 			"error": status.Error.Error(),
 		})
+
 	}
-	return c.JSON(logType)
+	return c.JSON(models.LogTypeResponse{
+		ID:          payLoadModel.ID,
+		CreatedAt:   payLoadModel.CreatedAt,
+		UpdatedAt:   payLoadModel.UpdatedAt,
+		Name:        payLoadModel.Name,
+		Description: payLoadModel.Description,
+	})
 }
 
+// UpdateLogType
+// @Summary Update a logType
+// @Description Update a logType
+// @Tags LogTypes
+// @Accept  json
+// @Produce  json
+// @Param id path string true "LogType ID"
+// @Param log_type body models.LogTypePayload true "LogType"
+// @Success 200 {object} models.LogTypeResponse
+// @Router /log-types/{id} [put]
 func UpdateLogType(c *fiber.Ctx) error {
 	id := c.Params("id")
-	var logType models.LogType
+	var logType models.LogTypePayload
 	if err := c.BodyParser(&logType); err != nil {
 		return c.Status(503).JSON(fiber.Map{
 			"error": err.Error(),
 		})
 	}
+
 	db := database.DBConn
-	db.Model(&logType).Where("id = ?", id).Updates(logType)
+	logTypeModel := models.LogType{
+		Name:        logType.Name,
+		Description: logType.Description,
+	}
+
+	db.Model(&logTypeModel).Where("id = ?", id).Updates(logTypeModel)
 	return c.JSON(fiber.Map{
 		"message": "LogType updated",
 	})
 }
 
+// Delete LogType
+// @Summary Delete a logType
+// @Description Delete a logType
+// @Tags LogTypes
+// @Accept  json
+// @Produce  json
+// @Param id path string true "LogType ID"
+// @Success 200 {object} models.LogTypeResponse
+// @Router /log-types/{id} [delete]
 func DeleteLogType(c *fiber.Ctx) error {
 	id := c.Params("id")
 	db := database.DBConn
